fix: dark mode

--- a/style.css
+++ b/style.css
@@ -99,6 +99,12 @@
         background-color: #23395B;
         color: #cbf7ed;
     }
+    .trilho.dark{
+        background-color: #c3c3c3;
+
+    }
     .trilho.dark .indicador{
-        left: 43px;
+        left: 40px;
+        background-color: white;
+
     }
